tests/neg/i6336.scala
object Test {
  val a: AnyVal = "foo" // error
  val b: AnyRef = 1 // error
}
